# multi-agent-ai-cv-analyst

./: .coverage  .env.example  .gitignore  IO_IMPLEMENTATION_SUMMARY.md  LANGGRAPH_IMPLEMENTATION.md  Makefile  PROVIDER_INTEGRATION_SUMMARY.md  README.md  TAXONOMY_IMPLEMENTATION_SUMMARY.md  debug_graph.py  demo_io.py  demo_md.py  demo_prioritize_gaps.py  pyproject.toml  requirements.txt  test_cv.txt  test_market_intel_demo.py  test_real_cv.txt  test_skill_analyst_demo.py  test_taxonomy_basic.py  test_taxonomy_integration.py
.github/: copilot-instructions.md
examples/: graph_usage.py
sample/: sample_report.md
src/: __init__.py  test_provider_integration.py  test_ui_enhancements.py
src/agents/: cv_parser.py  market_intel.py  reporter.py  skill_analyst.py
src/app/: cli.py  streamlit_app.py
src/config/: env_validation.py  reliability.py
src/graph/: builder.py  nodes.py  state.py  utils.py
src/llm/: provider.py
src/llm/prompts/: analyst.md  market.md  parser.md  reporter.md
src/tools/: embeddings.py  pdf2txt.py  search_adapter.py  taxonomy.py
src/utils/: eval.py  io.py  md.py
tests/: __init__.py  fixtures.py  test_cv_parser.py  test_embeddings.py  test_eval.py  test_flow.py  test_graph_builder.py  test_io.py  test_market_intel.py  test_md.py  test_pdf2txt.py  test_reporter.py  test_sample.txt  test_search_adapter.py  test_skill_analyst.py  test_taxonomy.py
